# omni

./: .gitignore  README.md  pyproject.toml
.github/workflows/: quarto_publish.yml
docs/: index.qmd  omni-draft-workflow.bpmn
docs/archive/datasets/: ukbb.md
docs/archive/datasets/indi/: sald.md
docs/archive/datasets/openneuro/: ds003490.md  ds003768.md  ds004511.md  ds004697.md  ds004796.md  ds005700.md
docs/archive/datasets/tuh/: tuab.md
docs/data/: spec.md
docs/data/datasets/: corr.md  fcp.md  hbn.md
docs/data/datasets/openneuro/: ds002158.md  ds003574.md  ds003800.md  ds003944.md  ds004584.md  ds004718.md  ds005713.md  ds005752.md
docs/data/datasets/tuh/: tueg.md
docs/data/src/: nifti2.py
docs/datasets/: abcd.md  cneuromod.md  pnc.md
docs/datasets/kaggle/: hms_harmful_brain.md
docs/datasets/mpi/: lemon.md
docs/datasets/openneuro/: ds002158.md  ds002778.md  ds003478.md  ds003490.md  ds003574.md  ds003768.md  ds003800.md  ds003944.md  ds003947.md  ds004024.md  ds004511.md  ds004584.md  ds004718.md  ds004796.md  ds005345.md  ds005486.md  ds005700.md  ds005713.md  ds005747.md  ds005752.md  ds005795.md
docs/datasets/tuh/: tuab.md  tueg.md  tuep.md
docs/flow/: overall.studyflow  preprocessing.studyflow  spec.md
docs/specs/: data.md  omni-data.md
docs/specs/schemas/: data.yaml
src/data/: README.md  edf.py  nifti2.py  schema.linkml.yaml
src/flow/: preprocessing_minimal_farah.studyflow
