[project]
name = "omni"
version = "0.0.0"
description = "Omni"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "ipykernel>=6",
    "numpy>=2",
    "pandas>=2",
    "pyyaml>=6",
    "pyarrow>=22",
    "zarr>=3.1.5",
    "nibabel>=5.3.3",
]

[dependency-groups]
dev = [
    "linkml>=1.8.7",
]
